$Id: ChangeLog,v 1.260 2005/08/02 17:46:44 haraldkipp Exp $

2005-08-02  Harald Kipp  <harald.kipp@egnite.de>

	* doc/gen/nutdoc_en.txt: Major API documentation update.
	This also includes the modification of a large number of 
	source files. But only comment lines had been updated.
	No code has been changed.

	* doc/gen/nut_en.cfg.in: Added new items for Doxygen 1.4.4.
	Event example and arch directory included.


2005-07-26  Harald Kipp  <harald.kipp@egnite.de>

	* conf/arch/arch.nut: All target dependent code is has been
	moved to a new library named libnutarch. This will break
	all existing application Makefiles.

	* lib/Makefile: Include new libnutarch into the build.

	* include/arch/arm/atom.h, include/arch/avr/atom.h,
	include/arch/h8300h/atom.h, include/arch/m68k/atom.h:
	AtomicInc() and AtomicDec() had been removed. This may break 
	existing applications but simplifies portability.

	* include/dev/irqreg.h: Several files were moved from dev
	to arch.

	* include/dev/term.h: Avoid redefinition of TIOCGWINSZ and
	TIOCSWINSZ on Linux.

	* include/sys/confos.h: Avoid redefinition of CONFOS_EE_OFFSET.

	* include/arch/unix.h, include/compiler.h, include/dev/debug.h,
	include/dev/uartavr.h, include/dev/usartavr.h, include/errno.h,
	include/netdb.h, include/netinet/in.h, include/stdio.h, 
	include/sys/atom.h, include/sys/nut_types.h, 
	include/sys/socket.h, include/sys/thread.h, include/sys/types.h,
	net/confnet.c, os/confos.c, os/heap.c, os/osdebug.c: 
	Cygwin added.

	* os/nutinit.c: Cygwin added. EEPROM support moved from os to
	dev.

	* os/thread.c: Cygwin added. The platform dependent part is
	now located in context.c in arch.

	* os/timer.c: Cygwin added. The platform dependent part is
	now located in ostimer.c in arch.

	* include/sys/timer.h: Hardware dependent timer functions
	moved to arch.

	* conf/arch/arm.nut, conf/arch/avr.nut, conf/arch/h8300h.nut,
	conf/arch/m68k.nut, conf/arch/unix.nut: Now each platform
	gets its own script.
